tb_api.h

typedef uint64_t uintattr_t;
typedef uint32_t uintattr_t;
typedef uint16_t uintattr_t;
/* Event */
struct tb_event {
    uint8_t type;
    uint8_t mod;
    uint16_t key;
    uint32_t ch;
    int32_t w;
    int32_t h;
    int32_t x;
    int32_t y;
};
/* Initialize the termbox library. This function should be called before any
 * other functions. `tb_init` is equivalent to `tb_init_file("/dev/tty")`.
 * After successful initialization, the library must be finalized using
 * `tb_shutdown`.
 */
int tb_init(void);
int tb_shutdown(void);
/* Synchronize the internal back buffer with the terminal by writing to tty. */
int tb_present(void);
/* Same as `tb_peek_event` except no timeout. */
int tb_poll_event(struct tb_event *event);
int tb_printf(int x, int y, uintattr_t fg, uintattr_t bg, const char *fmt, ...);
/* Deprecated. Set custom callbacks. `fn_type` is one of `TB_FUNC_*` constants,
 * `fn` is a compatible function pointer, or NULL to clear.
 *
 * `TB_FUNC_EXTRACT_PRE`:
 *   If specified, invoke this function BEFORE termbox tries to extract any
 *   escape sequences from the input buffer.
 *
 * `TB_FUNC_EXTRACT_POST`:
 *   If specified, invoke this function AFTER termbox tries (and fails) to
 *   extract any escape sequences from the input buffer.
 */
int tb_set_func(int fn_type, int (*fn)(struct tb_event *, size_t *));